# ProjectRayTracer

./: .gitignore  CMakeLists.txt  ProjectRay.sln  README.md
PRay/: CMakeLists.txt  main.cpp
PRay/Resources/basic/: triangles5.mtl
PRay/include/BRDF/: BRDF.h  Glossy.h  Lambertian.h  PerfectSpecular.h
PRay/include/Camera/: Camera.h  Orthographic.h  PinHole.h  ThinLens.h
PRay/include/Lights/: Ambient.h  AmbientOcculuder.h  Light.h  PointLight.h
PRay/include/Materials/: GlossyReflector.h  Material.h  Matte.h  Phong.h  Reflective.h
PRay/include/Objects/: BVH.h  BevelCylinder.h  Box.h  Compound.h  Disk.h  GeometricObject.h  Grid.h  Instance.h  Mesh.h  OpenCone.h  OpenCylinder.h  Plane.h  Rectangle.h  SolidCylinder.h  Sphere.h  Torus.h  Triangle.h
PRay/include/Objects/Meshes/: Mesh.h
PRay/include/Samplers/: MultiJittered.h  Regular.h  Sampler.h
PRay/include/Utils/: BBox.h  Constants.h  Maths.h  Matrix.h  Normal.h  Point2D.h  Point3D.h  RGBColor.h  Ray.h  ShadeRec.h  Vector3D.h
PRay/include/World/: ViewPlane.h  World.h
PRay/src/BRDF/: BRDF.cpp  Glossy.cpp  Lambertian.cpp  PerfectSpecular.cpp
PRay/src/Camera/: Camera.cpp  Orthographic.cpp  PinHole.cpp  ThinLens.cpp
PRay/src/Lights/: Ambient.cpp  AmbientOcculuder.cpp  Light.cpp  PointLight.cpp
PRay/src/Materials/: GlossyReflector.cpp  Material.cpp  Matte.cpp  Phong.cpp  Reflective.cpp
PRay/src/Objects/: BVH.cpp  BevelCylinder.cpp  Box.cpp  Compound.cpp  Disk.cpp  GeometricObject.cpp  Grid.cpp  Instance.cpp  Mesh.cpp  OpenCone.cpp  OpenCylinder.cpp  Plane.cpp  Rectangle.cpp  SolidCylinder.cpp  Sphere.cpp  Torus.cpp  Triangle.cpp
PRay/src/Objects/Meshes/: Mesh.cpp
PRay/src/Samplers/: MultiJittered.cpp  Regular.cpp  Sampler.cpp
PRay/src/Utils/: BBox.cpp  Maths.cpp  Matrix.cpp  Normal.cpp  Point2D.cpp  Point3D.cpp  RGBColor.cpp  Ray.cpp  ShadeRec.cpp  Vector3D.cpp
PRay/src/World/: ViewPlane.cpp  World.cpp
PRay/src/builds/: bareBoneBuild.cpp  bvhTestBuilds.cpp  geometricObjectsbuild.cpp  gridRandomSphere.cpp  lightTestBuilds.cpp  materialsTestBuild.cpp  meshTestBuilds.cpp  prespCamTestBuild.cpp
ProjectRay/: ProjectRay.vcxproj  ProjectRay.vcxproj.filters  main.cpp
ProjectRay/src/BRDF/: BRDF.cpp  BRDF.h  Glossy.cpp  Glossy.h  Lambertian.cpp  Lambertian.h
ProjectRay/src/Camera/: Camera.cpp  Camera.h  PinHole.cpp  PinHole.h
ProjectRay/src/Lights/: Ambient.cpp  Ambient.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h
ProjectRay/src/Materials/: Material.cpp  Material.h  Matte.cpp  Matte.h  Phong.cpp  Phong.h
ProjectRay/src/Objects/: Box.cpp  Box.h  Disk.cpp  Disk.h  GeometricObject.cpp  GeometricObject.h  Plane.cpp  Plane.h  Rectangle.cpp  Rectangle.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
ProjectRay/src/Samplers/: MultiJittered.cpp  MultiJittered.h  Regular.cpp  Regular.h  Sampler.cpp  Sampler.h
ProjectRay/src/Utils/: BBox.cpp  BBox.h  Constants.h  Maths.cpp  Maths.h  Matrix.cpp  Matrix.h  Normal.cpp  Normal.h  Point2D.cpp  Point2D.h  Point3D.cpp  Point3D.h  RGBColor.cpp  RGBColor.h  Ray.cpp  Ray.h  ShadeRec.cpp  ShadeRec.h  Vector3D.cpp  Vector3D.h
ProjectRay/src/World/: ViewPlane.cpp  ViewPlane.h  World.cpp  World.h
ProjectRay/src/builds/: bareBoneBuild.cpp
